# modular-log-analysis-toolkit

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  changelog.txt  pyproject.toml  requirements.txt
config/: alerts.yaml  patterns.yaml  settings.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  EXAMPLES.md  README.md  TROUBLESHOOTING.md  cli-usage.md  dashboard.md  error-codes.md  faq.md  installation.md  plugin-development.md  python-api.md  quickstart.md
docs/modules/: aggregator.md  alerts.md  auth.md  cache.md  dedup.md  exporter.md  filter.md  geolocation.md  models.md  parser.md  plugins.md  retention.md  search.md  streaming.md  tags.md  webhooks.md
src/: __init__.py  aggregator.py  alerts.py  auth.py  cache.py  cli.py  dedup.py  exporter.py  filter.py  geolocation.py  models.py  parser.py  plugins.py  reader.py  retention.py  search.py  streaming.py  tags.py  web.py  webhooks.py
tests/: __init__.py  test_aggregator.py  test_filter.py  test_parser.py
