[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sk-loganalyzer"
version = "1.2.0"
description = "A modular log analysis toolkit for parsing, filtering, and monitoring log files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "sk-loganalyzer team"},
]

[project.scripts]
sk-loganalyzer = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
include = ["src*"]
